# rs-hcnet-strkey

./: Cargo.toml  README.md
src/: crc.rs
tests/: debug.rs  tests.rs
