[package]
name = "hcnet-strkey"
description = "Encode and decode strkeys for Hcnet."
homepage = ""
repository = ""
authors = [""]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.8"
edition = "2021"
rust-version = "1.67.0"

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "hcnet-strkey"
path = "src/bin/hcnet-strkey/main.rs"
required-features = ["cli"]
doctest = false

[build_dependencies]
crate-git-revision = "0.0.6"

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
base32 = "0.4.0"
thiserror = "1.0.36"
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
